--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,33 +1,39 @@
 body {
+    background: #1e1f24;
     color: #333;
     text-align: center;
-    font-family: 'Arial';
+    font-family: Arial;
     font-size: 16px;
     margin: 0;
     padding: 0;
 }
 
 #cabecera {
-    background: #33A;
-    box-shadow: 0px 5px 30px 0px rgb(0, 0, 0, 0.5);
+    background: #37488b;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
     color: white;
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
 }
 
+#cabecera #logo {
+    width: 20px;
+    vertical-align: middle;
+}
+
 #cabecera #tagline {
-    margin: 0 0 0 1em;
+    padding: 0 0 0 1em;
     font-weight: normal;
     font-size: 0.8em;
 }
 
 #container {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
-    border: 1 px solid #9e9b9b;
-    margin: auto;
+    border: 1px solid #DDD;
+    margin: 0 auto;
 }
 
 #container h1 {
@@ -35,5 +41,6 @@ body {
 }
 
 #post {
+    background: white;
     padding: 1em;
 }
